// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should prioritize disabled over error styles 1`] = `
.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<div
  class="circuit-2"
  disabled=""
  for="input_11"
>
  <div
    class="circuit-1"
  >
    <input
      aria-invalid="true"
      class="circuit-0"
      disabled=""
      id="input_11"
      value=""
    />
  </div>
</div>
`;

exports[`Input should prioritize disabled over warning styles 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<div
  class="circuit-2"
  for="input_12"
>
  <div
    class="circuit-1"
  >
    <input
      aria-invalid="true"
      class="circuit-0"
      id="input_12"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #333333;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div
  class="circuit-3"
  for="input_4"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_4"
      value=""
    />
  </div>
  <span
    class="circuit-2"
  >
    Validation hint
  </span>
</div>
`;

exports[`Input should render with a prefix when passed the prefix prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-2 {
  position: relative;
}

label .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #333333;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-1 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-left: 40px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-1::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-3"
  for="input_2"
>
  <div
    class="circuit-2"
  >
    <div
      class="circuit-0"
      style="width: 24px; height: 24px;"
    />
    <input
      class="circuit-1"
      id="input_2"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with a suffix when passed the suffix prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-2 {
  position: relative;
}

label .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: 40px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-1 {
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #333333;
  padding: 12px;
  height: 40px;
  width: 40px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div
  class="circuit-3"
  for="input_3"
>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="input_3"
      value=""
    />
    <div
      class="circuit-1"
      style="width: 24px; height: 24px;"
    />
  </div>
</div>
`;

exports[`Input should render with custom styles 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
  border: 1px solid red;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
  color: red;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-2"
  for="input_15"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_15"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with default styles 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-2"
  for="input_1"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_1"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with disabled styles when passed the disabled prop 1`] = `
.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-2"
  disabled=""
  for="input_10"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      disabled=""
      id="input_10"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with inline styles when passed the inline prop 1`] = `
.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  display: inline-block;
  margin-right: 16px;
  margin-bottom: 16px;
}

<div
  class="circuit-2"
  for="input_13"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_13"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with invalid styles when passed the invalid prop 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<div
  class="circuit-2"
  for="input_6"
>
  <div
    class="circuit-1"
  >
    <input
      aria-invalid="true"
      class="circuit-0"
      id="input_6"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

<div
  class="circuit-2"
  for="input_14"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_14"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with readonly styles when passed the readOnly prop 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-2"
  for="input_9"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_9"
      readonly=""
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with right aligned text 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  text-align: right;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-2"
  for="input_8"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_8"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with valid styles when passed the showValid prop 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-2"
  for="input_7"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_7"
      value=""
    />
  </div>
</div>
`;

exports[`Input should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  position: relative;
}

label .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #D8A413;
}

.circuit-0::-webkit-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #999999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::placeholder {
  color: #D8A413;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #AD7A14;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D8A413;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D8A413;
}

<div
  class="circuit-2"
  for="input_5"
>
  <div
    class="circuit-1"
  >
    <input
      class="circuit-0"
      id="input_5"
      value=""
    />
  </div>
</div>
`;
